Add a development section around coordinating customer escalations

--- a/sites/handbook/source/handbook/engineering/development/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/index.html.md.erb
@@ -530,6 +530,23 @@ Some areas have already been identified that meet the definition above, and may 
 
 [ClickHouse usage by Monitor:Observability group](/handbook/engineering/development/ops/monitor/observability/#clickhouse-datastore)
 
+## Customer escalation coordination
+
+If development is the DRI or actively participating in a customer escalation, consider the following:
+
+* The customer will want to know when they can see the benefits of a change. They will not likely be familiar with GitLab practices for tracking and predicting due dates and milestones. They will also not be familiar with our workflows and associated labels nor the predictability of code review timelines, different timelines on releases to GitLab.com compared with releases for self-hosted customers and our use of feature flags.
+* Customers often don't rely on asynchronous communication at the level that GitLab does. Educate the customer on our practices and adapt to find a combined asynchronous and synchronous communication method and cadence that works for everyone.
+* Encourage customers to collaborate with us in epics, issues, and merge requests of interest. Keep in mind that they may not have access to ones that are confidential and/or may not be comfortable or able to collaborate with us in this public forum.
+* Consider utilizing Google documents to collaborate with the customer as a backup for collaboration via epics, issues, and merge requests.
+* Consider utilizing a shared Slack channel to collaborate, adding the customers to our slack via "one Slack channel access requests".  [Example](https://gitlab.com/gitlab-com/team-member-epics/access-requests/-/issues/16192)
+* In meetings, tell customers why we like to record them and ask if they are OK with doing so. Use [Chorus](https://about.gitlab.com/handbook/sales/field-operations/sales-operations/go-to-market/chorus/) for scheduling the recordings to address legal requirements for recording meetings with customers.
+* In meetings, tell customers why we take notes before, during, and after the meeting, as it may not be natural for them to collaborate in this way.
+* Make sure the appropriate priority label is applied to all issues being tracked by the customer.
+* In the agenda for recurring meetings, track the items tracked by the customer in priority order at the top and review the status, next steps, customer DRI, and GitLab DRI for each.  Discuss in the meeting periodically.
+Remind GitLab team members in Slack to update the status of items they are the DRI for before recurring meetings.
+* Post a link to the meeting notes and recording in a Slack channel for the customer escalation, so those who did not attend know that the notes and recording are available for review.
+* When there is an action item for someone in a meeting (whether they are present or not), tag them in an issue or MR (or in Slack) so they will see it.
+* Be careful to not make commitments to customers without first talking to product management and development leaders to confirm the impact that commitment may have on other commitments.
 
 ## Books
 
