Add AppSec guidelines to Incubation Engineering Playbook

--- a/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/incubation/playbook/index.html.md.erb
@@ -104,7 +104,7 @@ Incubation Engineers are often required to create prototypes or demo application
 
 ### Releasing Features
 
-When releasing features, ensure you follow the [guidelines for documentation](https://about.gitlab.com/handbook/product/ux/technical-writing/workflow/#documentation-for-a-product-change). 
+When releasing features, ensure you engage the [Application Security team](https://about.gitlab.com/handbook/security/security-engineering-and-research/application-security/stable-counterparts.html) if your feature matches the [guidelines of what should be reviewed](https://about.gitlab.com/handbook/security/security-engineering-and-research/application-security/appsec-reviews.html#what-should-be-reviewed), and follow the [guidelines for documentation](https://about.gitlab.com/handbook/product/ux/technical-writing/workflow/#documentation-for-a-product-change). 
 
 ### Tools Incubation Engineers Use
 
