Refresh URLs and tighten copy on TeamOps Guiding Principles pages

--- a/sites/handbook/source/handbook/teamops/executing-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/executing-decisions/index.html.md.erb
@@ -107,4 +107,4 @@ Support team members are [assigned a permanent contact](/handbook/support/suppor
 
 ---
 
-Return to the [TeamOps homepage](/handbook/teamops/). 
+Return to the [TeamOps homepage](/teamops/). 
