--- a/sites/handbook/source/handbook/teamops/fast-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/fast-decisions/index.html.md.erb
@@ -120,4 +120,4 @@ GitLab's Learning and Development team hosted a [livestreamed Group Conversation
 
 ---
 
-Return to the [TeamOps](/handbook/teamops/) homepage. 
+Return to the [TeamOps](/teamops/) homepage. 
