--- a/sites/handbook/source/handbook/teamops/many-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/many-decisions/index.html.md.erb
@@ -20,9 +20,9 @@ twitter_creator: "@gitlab"
 
 This page is about one of the four Guiding Principles of TeamOps. Get immersed in a [complete overview of TeamOps](/teamops/), or jump straight into the free [TeamOps Practitioner Certification](https://levelup.gitlab.com/learn/course/teamops). 
 
-# Decisions are the fuel for high-performance teams
+# Decision velocity
 
-Conventional management philosophies often strive for consensus and avoid risk instead of developing a bias for action. This can result in slow decision-making. 
+Decisions are the fuel for high-performance teams, and represent a key success metric in the future of work. Conventional management philosophies often strive for consensus and avoid risk instead of developing a bias for action. This can result in slow decision-making. 
 
 In TeamOps, success is correlated with **decision velocity**: the quantity of decisions made in a particular stretch of time (e.g. month, quarter) and the results that stem from faster progress.
 
@@ -128,4 +128,4 @@ In GitLab's S-1 filing, CEO Sid Sijbrandij documented some of the ways that GitL
 
 ---
 
-Return to the [TeamOps](/handbook/teamops/) homepage. 
+Return to the [TeamOps](/teamops/) homepage. 
