--- a/sites/handbook/source/handbook/teamops/informed-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/informed-decisions/index.html.md.erb
@@ -20,7 +20,7 @@ twitter_creator: "@gitlab"
 
 This page is about one of the four Guiding Principles of TeamOps. Get immersed in a [complete overview of TeamOps](/teamops/), or jump straight into the free [TeamOps Practitioner Certification](https://levelup.gitlab.com/learn/course/teamops). 
 
-# Teams must be informed by an objective, shared reality
+# Shared reality
 
 The decisions teams make must be informed by an objective — and shared — reality. We ensure everyone can consume (self-serve) the same shared information. This starts with clear documentation in a single source of truth. Values manifest as behaviors which can be observed and quantified. And wherever possible, teams must default to transparency. While other management philosophies prioritize the speed of knowledge ***transfer***, TeamOps optimizes for the speed of knowledge ***retrieval***.
 
@@ -121,4 +121,4 @@ GitLab [reinforces its values in over 20 different ways](/handbook/values/#how-d
 
 ---
 
-Return to the [TeamOps](/handbook/teamops/) homepage. 
+Return to the [TeamOps](/teamops/) homepage. 
