Update 1password 8 download location

--- a/sites/handbook/source/handbook/security/index.html.md.erb
+++ b/sites/handbook/source/handbook/security/index.html.md.erb
@@ -346,9 +346,8 @@ Please note our 1Password for Business license agreement is an older 'Early adop
 
 ### 1Password Guidelines
 
-1. If you install the macOS application, install 1Password via the
-[Mac App Store](https://apps.apple.com/us/app/1password-7-password-manager/id1333542190)
-to ensure a more secure update process.
+1. If you install the macOS application, install 1Password via this link
+[1Password](https://1password.com/downloads/mac/)
 1. If you have a YubiKey or other hardware token, it can be added as a 2-factor
 method to your 1Password account for convenience.
 1. When traveling, consider using 1Password in "Travel Mode", see more on that [below](#travel-mode).
