Add `master` broken incidents to the scope of the dev team on-call process

--- a/sites/handbook/source/handbook/engineering/development/processes/Infra-Dev-Escalation/process.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/processes/Infra-Dev-Escalation/process.html.md.erb
@@ -35,6 +35,7 @@ The expectation for the development engineers is to be a technical consultant an
    1. **GitLab.com** and **self-managed hosting** **`operational emergencies`** raised by the **Infrastructure** , **Security**, and **Support** teams.
    1. Engineering emergencies raised by **teams in engineering** such as the Delivery and QE teams, where an **imminent deployment or release is blocked**.
    1. Engineering emergencies raised by **teams in product** such as the Product Operations team, where the **imminent deployment of the Release Post is blocked**.
+   1. Engineering emergencies raised by **teams in quality** such as the Engineering Productivity team, where  **merge requests merges are blocked** due to the `master` branch failing.
 1. This process is **NOT** a path to reach development team for non-urgent issues that the Infrastructure, Security, and Support teams run into. Such issues can be moved forward by:
    1. Labelling with `security` and the `@gitlab-com/security/appsec` team mentioned to be notified as part of the [Application Security Triage rotation](/handbook/security/#triage-rotation)
    1. Labelling with `infradev` which will be raised to [Infra/Dev triage board](https://gitlab.com/groups/gitlab-org/-/boards/1193197?label_name[]=gitlab.com&label_name[]=infradev)
@@ -54,6 +55,7 @@ The expectation for the development engineers is to be a technical consultant an
    1. [GitLab.com deployment](https://gitlab.com/gitlab-org/gitlab/issues/198440) or a security release is blocked due to pipeline failure.
    1. [A severity::1 regression found in the release staging.gitlab.com](https://gitlab.com/gitlab-org/gitlab/issues/199316)
    1. [Evaluating severity and making decision on a potential release or deployment show stopper](https://gitlab.com/gitlab-org/gitlab/-/issues/217450) collaboratively when other engineering teams are challenged to accomplish alone.
+   1. [`master` pipelines are broken](https://gitlab.com/gitlab-org/gitlab/-/issues/378474).
 
 #### Examples of non-qualified issues
 
