Remove documentation references

--- a/sites/uncategorized/source/community/hackathon/index.html.haml
+++ b/sites/uncategorized/source/community/hackathon/index.html.haml
@@ -65,9 +65,9 @@ extra_js:
           :markdown
             <b>Important information: you need to <a href="https://www.meetup.com/gitlab-virtual-meetups/events/289252392/">RSVP at our meetup.com event</a> for having your MRs count towards the prizes.</b>
             <br/>
-            The Hackathon is a virtual event open to anyone who is interested in contributing code, documentation, translations, UX designs and more to GitLab. By participating in GitLab's Hackathon, you have the opportunity to work on issues that matter to you and advance your skills/experience while joining a global, diverse and inclusive team of contributors and GitLab team members.
+            The Hackathon is a virtual event open to anyone who is interested in contributing code, translations, UX designs and more to GitLab. By participating in GitLab's Hackathon, you have the opportunity to work on issues that matter to you and advance your skills/experience while joining a global, diverse and inclusive team of contributors and GitLab team members. Documentation hackathons are conducted separately two times per year.
             <br/>
-            For this Hackathon, we are introducing the following contribution areas: Website, Security, Front-end, Back-end, Documentation. Prizes are awarded to participants for having Merge Requests (MRs) merged that contribute to the issues/epics linked below on each contribution area.
+            For this Hackathon, we are introducing the following contribution areas: Website, Security, Front-end, Back-end. Prizes are awarded to participants for having Merge Requests (MRs) merged that contribute to the issues/epics linked below on each contribution area.
             <br/>
 
             **To get started:**
@@ -83,7 +83,6 @@ extra_js:
 
             1. [Join the sessions](#sessions) to find more about the hackathon or watch the recording that will be posted afterwards.
             1. In case you don't want to work on the issues described in the <a href="#issues-to-contribute">contribute area below</a>:
-              <br>- An easy way to get started for first timers is contributing to documentation. Check out the curated [documentation issues which are welcoming contributions](https://about.gitlab.com/community/contribute/documentation/). Don't pick more than three documentation issues at once to allow other members of the community to contribute as well.
               <br>- To get started with code, check out the curated list of [issues to contribute to](https://about.gitlab.com/community/contribute/development/), based on the project you are interested in contributing to.
               <br>- Check out the [Contribute page](https://about.gitlab.com/contributing/) for additional ways of contributing.
             1. Leave a comment on the issue(s) you are working on. For help, you can ask directly in the issue or at the [contributors channel](#getting-help).
@@ -262,7 +261,7 @@ extra_js:
                       %i.fa.fa-angle-down.pull-right
                     .faq-answer
                       :markdown
-                        In a previous Hackathon (Q2 2021), we introduced a point system upon which the winners were decided. This worked well, so we're keen to continue with its adoption. However, for this Hackathon, points will be calculated per contribution area. As a result, we will have five leaderboards on each contribution area: Website, Security, Front-end, Back-end, Documentation. 
+                        In a previous Hackathon (Q2 2021), we introduced a point system upon which the winners were decided. This worked well, so we're keen to continue with its adoption. However, for this Hackathon, points will be calculated per contribution area. As a result, we will have four leaderboards on each contribution area: Website, Security, Front-end, Back-end. 
                         <br>Specifically:
                         <br> - 1 point for any MR merged that is not associated with an open/existing issue
                         <br> - 2 points, for [each MR merged that is associated/closing an open/existing issue](https://about.gitlab.com/community/contribute/development/)
