Add CoS slack channel

--- a/sites/handbook/source/handbook/engineering/cto-staff/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/cto-staff/index.html.md.erb
@@ -72,6 +72,8 @@ In general, we prefer to have more items than we can fit into the agenda, and th
 
 The acting of Chief of Staff to the CTO role is an opportunity for anyone in Engineering with an interest in leadership and upper management to get exposure. The acting role is there to make the rest of CTO Staff (CTO's direct reports) more effective. For more information check out the [job family](/job-families/engineering/acting-cos-to-the-cto/) for this acting position.
 
+Questions can also be asked in the [#chief-of-staff-to-cto-and-alumni Slack channel](https://gitlab.slack.com/archives/C047PF4GG7L).
+
 ### How the rotation works
 Similar to our [CEO Shadow Program](/handbook/ceo/shadow/), this role is a temporary assignment which is rotated. The rotation time commitment is 3 months full time, with 5-10% time commitment on either end of the 3 month time period. The structure will look like:
 
