Clarify sentence on being paid in non-local currency

--- a/sites/handbook/source/handbook/total-rewards/compensation/index.html.md.erb
+++ b/sites/handbook/source/handbook/total-rewards/compensation/index.html.md.erb
@@ -209,7 +209,7 @@ The compensation calculator is updated in December and June using a 12-month ave
 
 Adjustments to existing team members' compensation who are paid in local currency are made as part of the applicable [compensation review cycle](/handbook/total-rewards/compensation/compensation-review-cycle/). This is because since you are paid in local currency, your local purchasing power does not change.
 
-Team members contracted through a PEO or IT BV can choose to be paid in USD or EUR if there is volatility in their local currency. 
+Team members contracted through a PEO or IT BV may have the option to choose to be paid in USD or EUR if there is volatility in their local currency and their PEO (if applicable) and payroll can support paying in this currency. Both USD and EUR payment options may not be available in all countries. 
 * As Remote cannot adjust payment currency from HUF (Hungary) and there has been significant volatility, the exchange rate for HUF will be updated in the handbook effective September 1, 2022 and the new local currency amount will be reflected in team members paychecks as of this date. GitLab will continue to work with Remote to determine if the local currency can be adjusted from HUF to USD. 
 * For other PEO countries where we are not able to adjust local currency to USD or EUR, we will review on a case by case basis. 
 
