Add QE Self Managed Excellence page

--- a/sites/handbook/source/handbook/engineering/quality/quality-engineering/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/quality-engineering/index.html.md.erb
@@ -23,28 +23,7 @@ In FY23 we will be focused on innovative test architecture, efficiency, and cust
 
 Quality Engineering owns several tools which form a 3-prong trident for Self-Managed Excellence: the [GitLab Environment Toolkit (GET)](https://gitlab.com/gitlab-org/gitlab-environment-toolkit), the [GitLab Performance Tool (GPT)](https://gitlab.com/gitlab-org/quality/performance), and the [Reference Architectures (RA)](https://docs.gitlab.com/ee/administration/reference_architectures/). Together, these tools support our broader strategy of cementing customer confidence and contributing to their ongoing success by ensuring their instances are built to a rigorously tested standard that performs smoothly at scale.
 
-```mermaid
-flowchart LR
-  subgraph selfManageExcel["Self-Managed Excellence"]
-    GET["GitLab Environment Toolkit (GET)"]
-    GPT["GitLab Performance Tool (GPT)"]
-    RA("Reference Architectures (RA)")
-  end
-  style selfManageExcel fill:#FFF
-  style GET color:#6b4fbb, stroke:#9370DB
-  style GPT color:#6b4fbb, stroke:#9370DB
-  style RA color:#6b4fbb, stroke:#9370DB
-  click GET "https://gitlab.com/gitlab-org/gitlab-environment-toolkit" _blank
-  click GPT "https://gitlab.com/gitlab-org/quality/performance" _blank
-  click RA "https://docs.gitlab.com/ee/administration/reference_architectures/" _blank
-```
-
-- Expanding [GitLab Environment Toolkit (GET)](https://gitlab.com/gitlab-org/gitlab-environment-toolkit), our established provisioning toolkit.
-- Expanding [GitLab Performance Tool (GPT)](https://gitlab.com/gitlab-org/quality/performance), our performance testing tool for validation at scale.
-- Maturing [Reference Architectures (RA)](https://docs.gitlab.com/ee/administration/reference_architectures/), our guidelines for ensuring performant environments.
-- Built-in dashboard to allow administrator review of Reference Architecture adherence.
-- Automated monitoring to proactively surface deviations or suggested environment improvements.
-- Built-in tools to allow one-button environment validations.
+For more information, please visit our [Self-Managed Excellence](self-managed-excellence) page.
 
 ### Quality Architecture
 
